Fri Apr 22 20:00:28 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* docs/rtcorba/features.html:

	  Fix typo.

	* orbsvcs/IFR_Service/Makefile.am

	  Regenerate.

Fri Apr 22 16:30:16 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/IFR_Service.mpc:

          Added imr_client to base project list, IFR_Service executable
          needs to link to the ImR_Client library.

Fri Apr 22 20:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DomainA.cpp:
          Regenerated this file

Fri Apr 22 12:17:09 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/ImplRepo_Service/Adapter_Activator.h (ImR_Adapter):
	* orbsvcs/ImplRepo_Service/Forwarder.h (ImR_Forwarder):
	* orbsvcs/ImplRepo_Service/INS_Locator.h (INS_Locator):

	  Inherit from CORBA::LocalObject.  The C++ mapping requires that
	  implementations of locality constrained objects do so.

	* orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp (~ImR_Locator_i):
	* orbsvcs/ImplRepo_Service/ImR_Locator_i.h (~ImR_Locator_i):

	  Added an out-of-line destructor.  For some reason g++ 4.0 needs
	  this out-of-line destructor instead of the default one generated
	  by the compiler.  Without this destructor, we get a number of
	  "undefined reference" link errors related to the virtual tables
	  of the INS_Locator, ImR_Adapter and ImR_Forwarder members in
	  this class.

Fri Apr 22 12:09:23 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/HTIOP/HTIOP_Connector.cpp:
	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
	* tao/IIOP_Connector.cpp:
	* tao/Strategies/SCIOP_Connector.cpp:
	* tao/Strategies/SHMIOP_Connector.cpp:
	* tao/Strategies/UIOP_Connector.cpp:

	  Fix for BUGID 2074. In cancel_svc_handler () return the value
	  from base.connector_.cancel () properly.

	* tao/Connection_Handler.inl:

	  Added a check for TIMEOUT as part of of the is_closed () call.

Fri Apr 22 10:01:31 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
